--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
+
+    //Added from chat
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 application {
